fix issue dto and swagger attributes
