# src/Modules/User/Models/Role.php
@@ -1,18 +1,20 @@
 <?php
 
-namespace Modules\Role\Models;
+namespace Modules\User\Models;
 
-use Illuminate\Database\Eloquent\Model;
-use Modules\User\Models\User;
+use Illuminate\Database\Eloquent\Relations\BelongsToMany;
+use Spatie\Permission\Models\Role as SpatieRole;
+use Spatie\Permission\Models\Permission;
 
-class Role extends Model
+class Role extends SpatieRole
 {
-    protected $fillable = [
-        'name',
-        'slug',
-    ];
+    protected $fillable = ['name', 'guard_name'];
 
-    public function users()
+    public function permissions(): BelongsToMany
+    {
+        return $this->belongsToMany(Permission::class, config('permission.table_names.role_has_permissions'));
+    }
+    public function users(): BelongsToMany
     {
         return $this->belongsToMany(User::class);
     }
