# src/Modules/User/SwaggerDTO/Login/LoginRequestDTO.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace Modules\User\SwaggerDTO\Login;
+
+use OpenApi\Attributes as OA;
+
+#[OA\Schema(schema: "LoginRequestDTO")]
+class LoginRequestDTO
+{
+    #[OA\Property(type: 'string', example: '09123456789')]
+    public string $mobile;
+
+    #[OA\Property(type: 'string', format: 'password', example: 'password123')]
+    public string $password;
+}
